# DiscountServiceInRustOnAWS

./: .gitignore  README.md
.github/workflows/: rust.yml
DiscountCodeCreate/: Cargo.toml
DiscountCodeCreate/src/: main.rs
DiscountCodeGet/: Cargo.toml  build.sh
DiscountCodeGet/src/: main.rs
