[package]
name = "discount_code_get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
lambda_runtime = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = "1.17.0"
uuid = { version = "^0.8", features = ["v4"] }
